Refactor (SQL queries m.m)
Många överlappande SQL queries och tveksamma calls med dubbel normalisering. Sammansatt klasser och lagt till nya för att enklare skilja på vad som gör vad.